Refactor meal planning and nutrition dashboard navigation; update seasonal produce links
- Updated navigation links in meal-planning.html, nutrition-dashboard.html, shopping-list.html, and seasonal-produce.html to reflect new structure.
- Reorganized recipe modal in meal-planning.js and script.js to include tabs for ingredients, instructions, and nutrition.
- Enhanced recipe modal design with hero image and info cards for cook time and servings.
- Implemented functionality to load recommended seasonal recipes based on current ingredients in seasonal-produce.html.
- Improved CSS styles for recipe cards, modal, and seasonal tags for better responsiveness and visual appeal.

--- a/frontend/seasonal-produce.html
+++ b/frontend/seasonal-produce.html
@@ -22,7 +22,7 @@
             </a>
 
             <div class="nav-links">
-                <a href="index.html" class="nav-link">
+                <a href="home.html" class="nav-link">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
@@ -30,13 +30,9 @@
                     <i class="fas fa-search"></i>
                     <span>Recipes</span>
                 </a>
-                <a href="nutrition-dashboard.html" class="nav-link">
-                    <i class="fas fa-chart-line"></i>
-                    <span>Dashboard</span>
-                </a>
-                <a href="daily-recommendations.html" class="nav-link">
-                    <i class="fas fa-heart"></i>
-                    <span>Daily Tips</span>
+                <a href="seasonal-produce.html" class="nav-link active">
+                    <i class="fas fa-leaf"></i>
+                    <span>Seasonal</span>
                 </a>
                 <a href="meal-planning.html" class="nav-link">
                     <i class="fas fa-calendar-alt"></i>
@@ -46,9 +42,13 @@
                     <i class="fas fa-shopping-cart"></i>
                     <span>Shopping</span>
                 </a>
-                <a href="seasonal-produce.html" class="nav-link active">
-                    <i class="fas fa-leaf"></i>
-                    <span>Seasonal</span>
+                <a href="nutrition-dashboard.html" class="nav-link">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Dashboard</span>
+                </a>
+                <a href="daily-recommendations.html" class="nav-link">
+                    <i class="fas fa-heart"></i>
+                    <span>Daily Tips</span>
                 </a>
             </div>
 
@@ -136,6 +136,20 @@
                 <ul id="vegetablesList" class="ingredient-list" role="list">
                     <!-- Dynamically populated -->
                 </ul>
+            </div>
+        </section>
+
+        <!-- Recommended Recipes Section -->
+        <section class="recommended-section">
+            <div class="recommended-header">
+                <h3 class="recommended-title">
+                    <i class="fas fa-utensils"></i>
+                    <span>Recommended Seasonal Recipes</span>
+                </h3>
+                <p class="recommended-subtitle">Perfect recipes using ingredients that are in season now</p>
+            </div>
+            <div id="recipeCards" class="recipe-grid" role="list">
+                <!-- Recipe cards will be dynamically populated -->
             </div>
         </section>
 
@@ -273,6 +287,309 @@
         function updateAllContent() {
             renderFruitsList();
             renderVegetablesList();
+            loadRecommendedRecipes();
+        }
+
+        // Global variable to store all fetched recipes for refresh functionality
+        let allFetchedRecipes = [];
+        let displayedRecipeIds = new Set();
+
+        // Load recommended recipes based on seasonal ingredients
+        async function loadRecommendedRecipes() {
+            const recipeCardsContainer = document.getElementById('recipeCards');
+
+            // Show loading state
+            recipeCardsContainer.innerHTML = '<p class="loading-message">Loading seasonal recipes...</p>';
+
+            try {
+                // Get current in-season ingredients
+                const inSeasonIngredients = getInSeasonIngredients();
+
+                if (inSeasonIngredients.length === 0) {
+                    recipeCardsContainer.innerHTML = '<p class="empty-message">No seasonal ingredients available for the selected state and season.</p>';
+                    return;
+                }
+
+                // Fetch recipes from backend with ingredients filter
+                const ingredientsParam = inSeasonIngredients.join(',');
+                const response = await fetch(`${API_CONFIG.RECIPES_API}?ingredients=${encodeURIComponent(ingredientsParam)}&limit=50`);
+
+                if (!response.ok) {
+                    throw new Error(`Failed to fetch recipes: ${response.status}`);
+                }
+
+                const data = await response.json();
+                const rawRecipes = data.items || [];
+
+                console.log(`Loaded ${rawRecipes.length} recipes from API`);
+
+                // Filter and sort recipes by seasonal relevance
+                allFetchedRecipes = filterAndSortRecipes(rawRecipes);
+
+                console.log(`Filtered to ${allFetchedRecipes.length} highly seasonal recipes`);
+
+                if (allFetchedRecipes.length === 0) {
+                    recipeCardsContainer.innerHTML = '<p class="empty-message">No recipes found with enough seasonal ingredients. Try a different season or state.</p>';
+                    return;
+                }
+
+                // Reset displayed recipe IDs and render initial 4 recipes
+                displayedRecipeIds.clear();
+                renderRecipeCards(allFetchedRecipes.slice(0, 4));
+
+            } catch (error) {
+                console.error('Error loading recommended recipes:', error);
+                recipeCardsContainer.innerHTML = '<p class="error-message">Failed to load recipes. Please try again later.</p>';
+            }
+        }
+
+        // Get list of in-season ingredients for current state and season
+        function getInSeasonIngredients() {
+            if (!currentState || !seasonalData[currentState]) {
+                return [];
+            }
+
+            const stateData = seasonalData[currentState];
+            const ingredients = [];
+
+            // Get in-season fruits
+            const fruits = stateData.fruits || {};
+            for (const [fruitName, seasons] of Object.entries(fruits)) {
+                if (seasons.includes(currentSeason)) {
+                    ingredients.push(fruitName.toLowerCase());
+                }
+            }
+
+            // Get in-season vegetables
+            const vegetables = stateData.vegetables || {};
+            for (const [vegName, seasons] of Object.entries(vegetables)) {
+                if (seasons.includes(currentSeason)) {
+                    ingredients.push(vegName.toLowerCase());
+                }
+            }
+
+            return ingredients;
+        }
+
+        // Get seasonal ingredients that are in a recipe
+        function getRecipeSeasonalIngredients(recipe) {
+            const inSeasonIngredients = getInSeasonIngredients();
+            const recipeIngredients = recipe.ingredients || [];
+
+            const matchedIngredients = [];
+
+            for (const seasonalIng of inSeasonIngredients) {
+                for (const recipeIng of recipeIngredients) {
+                    if (typeof recipeIng === 'string') {
+                        const regex = new RegExp(`\\b${seasonalIng.replace(/[.*+?^${}()|[\]\\]/g, '\\$&')}\\b`, 'i');
+                        if (regex.test(recipeIng.toLowerCase())) {
+                            matchedIngredients.push(capitalizeFirst(seasonalIng));
+                            break;
+                        }
+                    }
+                }
+            }
+
+            return matchedIngredients;
+        }
+
+        // Calculate recipe score based on seasonal ingredients
+        // Prioritizes recipes with main ingredients (first 3) being seasonal
+        function calculateRecipeScore(recipe) {
+            const inSeasonIngredients = getInSeasonIngredients();
+            const recipeIngredients = recipe.ingredients || [];
+
+            let score = 0;
+            let mainIngredientsMatched = 0;
+            let totalMatches = 0;
+
+            // Check first 3 ingredients (main ingredients) with higher weight
+            for (let i = 0; i < Math.min(3, recipeIngredients.length); i++) {
+                const recipeIng = recipeIngredients[i];
+                if (typeof recipeIng === 'string') {
+                    for (const seasonalIng of inSeasonIngredients) {
+                        const regex = new RegExp(`\\b${seasonalIng.replace(/[.*+?^${}()|[\]\\]/g, '\\$&')}\\b`, 'i');
+                        if (regex.test(recipeIng.toLowerCase())) {
+                            score += 10; // High score for main ingredients
+                            mainIngredientsMatched++;
+                            totalMatches++;
+                            break;
+                        }
+                    }
+                }
+            }
+
+            // Check remaining ingredients with lower weight
+            for (let i = 3; i < recipeIngredients.length; i++) {
+                const recipeIng = recipeIngredients[i];
+                if (typeof recipeIng === 'string') {
+                    for (const seasonalIng of inSeasonIngredients) {
+                        const regex = new RegExp(`\\b${seasonalIng.replace(/[.*+?^${}()|[\]\\]/g, '\\$&')}\\b`, 'i');
+                        if (regex.test(recipeIng.toLowerCase())) {
+                            score += 1; // Low score for secondary ingredients
+                            totalMatches++;
+                            break;
+                        }
+                    }
+                }
+            }
+
+            return { score, mainIngredientsMatched, totalMatches };
+        }
+
+        // Filter and sort recipes by seasonal relevance
+        function filterAndSortRecipes(recipes) {
+            // Calculate scores for all recipes
+            const recipesWithScores = recipes.map(recipe => {
+                const scoreInfo = calculateRecipeScore(recipe);
+                return { recipe, ...scoreInfo };
+            });
+
+            // Filter: require at least 2 total matches OR 1+ main ingredient match
+            const filtered = recipesWithScores.filter(item =>
+                item.totalMatches >= 2 || item.mainIngredientsMatched >= 1
+            );
+
+            // Sort by score (descending)
+            filtered.sort((a, b) => b.score - a.score);
+
+            return filtered.map(item => item.recipe);
+        }
+
+        // Render recipe cards
+        function renderRecipeCards(recipes) {
+            const recipeCardsContainer = document.getElementById('recipeCards');
+
+            // Limit to 4 recipes for display
+            const displayRecipes = recipes.slice(0, 4);
+
+            // Track displayed recipe IDs
+            displayRecipes.forEach(recipe => {
+                if (recipe.recipe_id) {
+                    displayedRecipeIds.add(recipe.recipe_id);
+                }
+            });
+
+            const cardsHTML = displayRecipes.map((recipe, index) => {
+                const title = recipe.title || 'Untitled Recipe';
+
+                // Image handling similar to explore-recipes
+                const imageHtml = recipe.has_image && recipe.image_display ?
+                    `<div class="recipe-image"><img src="${recipe.image_display}" alt="${title}" onerror="this.parentElement.innerHTML='<i class=\\"fas fa-utensils\\" style=\\"color:#ccc;font-size:3rem;\\"></i>'"></div>` :
+                    `<div class="recipe-image"><i class="fas fa-utensils"></i></div>`;
+
+                // Get seasonal ingredients in this recipe
+                const seasonalIngredients = getRecipeSeasonalIngredients(recipe);
+                const ingredientTags = seasonalIngredients.map(ing =>
+                    `<span class="ingredient-tag">${ing}</span>`
+                ).join('');
+
+                return `
+                    <div class="recipe-card" role="listitem" data-recipe-id="${recipe.recipe_id || ''}" data-card-index="${index}" style="cursor: pointer;" tabindex="0">
+                        ${imageHtml}
+                        <div class="recipe-content">
+                            <div class="recipe-title">${title}</div>
+                            <div class="seasonal-ingredients-tags">
+                                ${ingredientTags}
+                            </div>
+                            <div class="recipe-actions">
+                                <button class="btn-refresh" onclick="event.stopPropagation(); refreshSingleRecipe(${index})" aria-label="Refresh recipe">
+                                    <i class="fas fa-sync-alt"></i>
+                                    <span>Refresh</span>
+                                </button>
+                                <button class="btn-remove" onclick="event.stopPropagation(); removeSingleRecipe(${index})" aria-label="Remove recipe">
+                                    <i class="fas fa-times"></i>
+                                    <span>I don't want this</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            }).join('');
+
+            recipeCardsContainer.innerHTML = cardsHTML;
+
+            // Add click event listeners to recipe cards
+            const cards = recipeCardsContainer.querySelectorAll('.recipe-card');
+            cards.forEach((card, idx) => {
+                const recipe = displayRecipes[idx];
+                card.addEventListener('click', function(e) {
+                    // Don't open if clicking on buttons
+                    if (e.target.closest('.btn-refresh') || e.target.closest('.btn-remove')) {
+                        return;
+                    }
+                    openRecipeModal(recipe);
+                });
+            });
+        }
+
+        // Refresh a single recipe card
+        function refreshSingleRecipe(cardIndex) {
+            // Get a random recipe that hasn't been displayed
+            const availableRecipes = allFetchedRecipes.filter(recipe =>
+                !displayedRecipeIds.has(recipe.recipe_id)
+            );
+
+            if (availableRecipes.length === 0) {
+                alert('No more recipes available. Try changing the season or state.');
+                return;
+            }
+
+            // Pick a random recipe
+            const randomIndex = Math.floor(Math.random() * availableRecipes.length);
+            const newRecipe = availableRecipes[randomIndex];
+
+            // Get current displayed recipes
+            const recipeCards = document.querySelectorAll('.recipe-card');
+            const currentRecipes = Array.from(recipeCards).map(card => {
+                const recipeId = card.dataset.recipeId;
+                return allFetchedRecipes.find(r => r.recipe_id === recipeId);
+            });
+
+            // Remove old recipe ID from displayed set
+            const oldRecipeId = currentRecipes[cardIndex]?.recipe_id;
+            if (oldRecipeId) {
+                displayedRecipeIds.delete(oldRecipeId);
+            }
+
+            // Replace with new recipe
+            currentRecipes[cardIndex] = newRecipe;
+
+            // Re-render all cards
+            renderRecipeCards(currentRecipes);
+        }
+
+        // Remove a single recipe card
+        function removeSingleRecipe(cardIndex) {
+            // Get current displayed recipes
+            const recipeCards = document.querySelectorAll('.recipe-card');
+            const currentRecipes = Array.from(recipeCards).map(card => {
+                const recipeId = card.dataset.recipeId;
+                return allFetchedRecipes.find(r => r.recipe_id === recipeId);
+            }).filter((recipe, index) => index !== cardIndex); // Remove the specified card
+
+            // Remove from displayed set
+            const removedRecipeId = recipeCards[cardIndex]?.dataset.recipeId;
+            if (removedRecipeId) {
+                displayedRecipeIds.delete(removedRecipeId);
+            }
+
+            // Try to add a new recipe to maintain 4 cards
+            const availableRecipes = allFetchedRecipes.filter(recipe =>
+                !displayedRecipeIds.has(recipe.recipe_id)
+            );
+
+            if (availableRecipes.length > 0) {
+                const randomIndex = Math.floor(Math.random() * availableRecipes.length);
+                currentRecipes.push(availableRecipes[randomIndex]);
+            }
+
+            // Re-render all cards
+            if (currentRecipes.length > 0) {
+                renderRecipeCards(currentRecipes);
+            } else {
+                document.getElementById('recipeCards').innerHTML = '<p class="empty-message">No more recipes available.</p>';
+            }
         }
 
         // Render fruits list
@@ -341,6 +658,12 @@
 
         // Render recommended recipes
         // Removed - Recommended recipes functionality deleted
+
+        // Capitalize first letter of a string
+        function capitalizeFirst(str) {
+            if (!str) return '';
+            return str.charAt(0).toUpperCase() + str.slice(1);
+        }
 
         // Show error message
         function showError(message) {
