--- a/frontend/meal-planning.html
+++ b/frontend/meal-planning.html
@@ -105,6 +105,7 @@
                 <div class="step" data-step="2">2</div>
                 <div class="step" data-step="3">3</div>
                 <div class="step" data-step="4">4</div>
+                <div class="step" data-step="5">5</div>
             </div>
 
             <!-- Questionnaire Content -->
