Add "Add to Shopping List" feature in Nutrition Dashboard and enhance loading styles

--- a/frontend/seasonal-produce.html
+++ b/frontend/seasonal-produce.html
@@ -584,7 +584,7 @@
                     if (e.target.closest('.btn-refresh') || e.target.closest('.btn-remove')) {
                         return;
                     }
-                    openRecipeModal(recipe);
+                    openRecipeModal(recipe, 'seasonal');
                 });
             });
         }
