--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -94,7 +94,6 @@
             <div class="section-container">
                 <h1 class="page-title"><i class="fas fa-chart-line"></i> Nutrition Dashboard</h1>
                 <p class="page-subtitle">Track your daily nutrition intake and monitor your health goals</p>
-                <p class="page-description">Track your daily nutrition goals at a glance</p>
             </div>
         </section>
 
@@ -241,15 +240,6 @@
                                     <div id="dashboard-nutrition"></div>
                                 </div>
                             </section>
-
-                            <div class="health-tip-container">
-                                <div class="health-tip-header">
-                                    <h2><i class="fas fa-heart"></i> Today's Health Tip</h2>
-                                </div>
-                                <div class="health-tip-content">
-                                    <p><strong>Tracking Tip:</strong> Remember to log all your meals and snacks throughout the day. Even small items like a piece of fruit or handful of nuts contribute to your daily nutrition goals. Consistent logging helps you build healthier eating habits!</p>
-                                </div>
-                            </div>
                         </div>
 
                         <!-- Today's Meals Added -->
@@ -266,6 +256,16 @@
                                 </ul>
                             </div>
                         </aside>
+                    </div>
+                </div>
+
+                <!-- Today's Health Tip (moved outside goals-container) -->
+                <div class="health-tip-container">
+                    <div class="health-tip-header">
+                        <h2><i class="fas fa-heart"></i> Today's Health Tip</h2>
+                    </div>
+                    <div class="health-tip-content">
+                        <p><strong>Tracking Tip:</strong> Remember to log all your meals and snacks throughout the day. Even small items like a piece of fruit or handful of nuts contribute to your daily nutrition goals. Consistent logging helps you build healthier eating habits!</p>
                     </div>
                 </div>
             </div>
