--- a/frontend/meal-planning.html
+++ b/frontend/meal-planning.html
@@ -177,6 +177,10 @@
                     <i class="fas fa-shopping-cart"></i>
                     <span>Generate Shopping List</span>
                 </button>
+                <button class="btn btn-success btn-large" onclick="addMealPlanToDashboard()">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Add to Dashboard</span>
+                </button>
                 <!-- Temporarily commented out print functionality
                 <button class="btn btn-outline btn-large" onclick="printMealPlan()">
                     <i class="fas fa-print"></i>
